--- a/layouts/partials/li_citation.html
+++ b/layouts/partials/li_citation.html
@@ -5,55 +5,40 @@
     {{/* APA Style */}}
     {{ if eq (site.Params.publications.citation_style | default "apa") "apa" }}
 
-    <span class="article-metadata li-cite-author">
-      {{ partial "page_metadata_authors" . }}
-    </span>
-    ({{- .Date.Format "2006" -}}).
-    <a href="{{ .RelPermalink }}">{{ .Title }}</a>.
-    {{ if .Params.publication_short }}
-    {{- .Params.publication_short | markdownify -}}.
-    {{ else if .Params.publication }}
-    {{- .Params.publication | markdownify -}}.
-    {{ end }}
-    <p>{{ partial "page_links" (dict "page" . "is_list" 1) }}</p>
+      <span class="article-metadata li-cite-author">
+        {{ partial "page_metadata_authors" . }}
+      </span>
+      ({{- .Date.Format "2006" -}}).
+      <a>{{ .Title }}</a>.
+      {{ if .Params.publication_short }}
+        {{- .Params.publication_short | markdownify -}}.
+      {{ else if .Params.publication }}
+        {{- .Params.publication | markdownify -}}.
+      {{ end }}
+      <p>{{ partial "page_links" (dict "page" . "is_list" 1) }}</p>
 
     {{/* MLA Style */}}
     {{ else if eq site.Params.publications.citation_style "mla" }}
 
-    <span class="article-metadata li-cite-author">
-      {{ partial "page_metadata_authors" . }}.
-    </span>
-    <a href="{{ .RelPermalink }}">{{ .Title }}</a>.
-    {{ if .Params.publication_short }}
-    {{- .Params.publication_short | markdownify -}},
-    {{ else if .Params.publication }}
-    {{- .Params.publication | markdownify -}},
-    {{ end }}
-    {{- .Date.Format "2006" -}}.
-    <p>{{ partial "page_links" (dict "page" . "is_list" 1) }}</p>
-
-    {{/* CO Style */}}
-    {{ else }}
-
-    <span class="article-metadata li-cite-author">
-      {{ partial "page_metadata_authors" . }}.
-    </span>
-    <a href="{{ .RelPermalink }}">{{ .Title }}</a>.<br>
-    {{ if .Params.publication_short }}
-      {{- .Params.publication_short | markdownify -}}
-    {{ else if .Params.publication }}
-      {{- .Params.publication | markdownify -}}
-    {{ end }}
-    <p>{{ partial "page_links" (dict "page" . "is_list" 1) }}</p>
-
+      <span class="article-metadata li-cite-author">
+        {{ partial "page_metadata_authors" . }}.
+      </span>
+      <a href="{{ .RelPermalink }}">{{ .Title }}</a>.
+      {{ if .Params.publication_short }}
+        {{- .Params.publication_short | markdownify -}},
+      {{ else if .Params.publication }}
+        {{- .Params.publication | markdownify -}},
+      {{ end }}
+      {{- .Date.Format "2006" -}}.
+      <p>{{ partial "page_links" (dict "page" . "is_list" 1) }}</p>
     {{ end }}
   </div>
 
-  {{/* Add Almetric and Dimension badges */}}
+  {{/* Add Altmetric and Dimension badges */}}
   <div class="ml-3">
   {{ if and .Params.add_badge .Params.doi }}
-    <div data-badge-popover="left" data-badge-type="donut" data-doi="{{ .Params.doi }}" data-condensed="true" class="altmetric-embed"></div>
-    <div class="__dimensions_badge_embed__" data-doi="{{ .Params.doi }}" data-legend="hover-left" data-style="small_circle"></div>
+    <div data-badge-popover="left" data-badge-type="donut" data-doi="{{ .Params.doi }}" data-condensed="true" class="altmetric-embed" data-link-target='_blank' rel="noopener noreferrer"></div>
+    <div class="__dimensions_badge_embed__" data-doi="{{ .Params.doi }}" data-legend="hover-left" data-style="small_circle" rel="noopener noreferrer"></div>
   {{ end }}
   </div>
 </div>
