--- a/layouts/partials/views/citation.html
+++ b/layouts/partials/views/citation.html
@@ -37,12 +37,15 @@
   <div class="btn-links">
     {{ partial "page_links" (dict "page" $item "is_list" 1) }}
   </div>
-  
-  {{/* Add Altmetric and Dimension badges */}}
+  {{ end }}
+
+  {{/* Add Almetric and Dimension badges */}}
   <div class="ml-3">
     {{ if and .Params.add_badge .Params.doi }}
-    <div data-badge-popover="left" data-badge-type="donut" data-doi="{{ .Params.doi }}" data-condensed="true" class="altmetric-embed" data-link-target='_blank' rel="noopener noreferrer"></div>
-    <div class="__dimensions_badge_embed__" data-doi="{{ .Params.doi }}" data-legend="hover-left" data-style="small_circle" rel="noopener noreferrer"></div>
-  </div>
-  
+     <div data-badge-popover="left" data-badge-type="donut" data-doi="{{ .Params.doi }}" data-condensed="true" class="altmetric-embed"></div>
+     <div class="__dimensions_badge_embed__" data-doi="{{ .Params.doi }}" data-legend="hover-left" data-style="small_circle"></div>
+   {{ end }}
+   </div>
+ </div>
+
 </div>
