--- a/layouts/partials/views/citation.html
+++ b/layouts/partials/views/citation.html
@@ -1,3 +1,9 @@
+{{/* Altmetric badges */}}
+<script type='text/javascript' src='https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js'></script>
+
+{{/* Dimension badges */}}
+<script async src="https://badge.dimensions.ai/badge.js" charset="utf-8"></script>
+
 {{ $item := .item }}
 {{ $has_attachments := partial "functions/has_attachments" $item }}
 
