--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -8,8 +8,23 @@
   justify-content: center;
 }
 
+.clearfix:before
+.clearfix:after
+
 // panel background
-.panel{
+* {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.panel {
   margin-bottom: 20px;
   background-color: #fff;
   border: 1px solid transparent;
