--- a/layouts/partials/views/community/altcitation.html
+++ b/layouts/partials/views/community/altcitation.html
@@ -1,31 +1,32 @@
 {{ $item := .item }}
 {{ $has_attachments := partial "functions/has_attachments" $item }}
 
-<div class="pub-list-item" style="margin-bottom: 1rem">
-  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+<div class="media stream-item">
+  <div class="pub-list-item" style="margin-bottom: 1rem">
+    <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
 
   {{/* APA Style */}}
   {{ if eq (site.Params.publications.citation_style | default "apa") "apa" }}
 
-  <span class="article-metadata li-cite-author">
-    {{ partial "page_metadata_authors" $item }}
-  </span>
+    <span class="article-metadata li-cite-author">
+      {{ partial "page_metadata_authors" $item }}
+    </span>
   ({{- $item.Date.Format "2006" -}}).
-  <a href="{{ $item.RelPermalink }}">{{ $item.Title }}</a>.
+    <a href="{{ $item.RelPermalink }}">{{ $item.Title }}</a>.
   {{ if $item.Params.publication_short }}
     {{- $item.Params.publication_short | markdownify -}}.
   {{ else if $item.Params.publication }}
     {{- $item.Params.publication | markdownify -}}.
   {{ end }}
-  <p>{{ partial "page_links" (dict "page" $item "is_list" 1) }}</p>
+    <p>{{ partial "page_links" (dict "page" $item "is_list" 1) }}</p>
 
   {{/* MLA Style */}}
   {{ else }}
 
-  <span class="article-metadata li-cite-author">
+    <span class="article-metadata li-cite-author">
     {{ partial "page_metadata_authors" $item }}.
-  </span>
-  <a href="{{ $item.RelPermalink }}">{{ $item.Title }}</a>.
+    </span>
+    <a href="{{ $item.RelPermalink }}">{{ $item.Title }}</a>.
   {{ if $item.Params.publication_short }}
     {{- $item.Params.publication_short | markdownify -}},
   {{ else if $item.Params.publication }}
@@ -34,10 +35,11 @@
   {{- $item.Date.Format "2006" -}}.
 
   {{ if $has_attachments }}
-  <div class="btn-links">
+    <div class="btn-links">
     {{ partial "page_links" (dict "page" $item "is_list" 1) }}
-  </div>
+    </div>
   {{ end }}
+  </div>
 
   {{/* Add Almetric and Dimension badges */}}
   <div class="ml-3">
