--- a/layouts/partials/views/community/altcitation.html
+++ b/layouts/partials/views/community/altcitation.html
@@ -1,52 +1,48 @@
 {{ $item := .item }}
 {{ $has_attachments := partial "functions/has_attachments" $item }}
 
-<div class="media stream-item">
-  <div class="pub-list-item" style="margin-bottom: 1rem">
-    <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+<div class="pub-list-item view-alt-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
 
-    {{/* APA Style */}}
-    {{ if eq (site.Params.publications.citation_style | default "apa") "apa" }}
+  {{/* APA Style */}}
+  {{ if eq (site.Params.publications.citation_style | default "apa") "apa" }}
 
-      <span class="article-metadata li-cite-author">
-        {{ partial "page_metadata_authors" $item }}
-      </span>
-      ({{- $item.Date.Format "2006" -}}).
-      <a href="{{ $item.RelPermalink }}">{{ $item.Title }}</a>.
-      {{ if $item.Params.publication_short }}
-        {{- $item.Params.publication_short | markdownify -}}.
-      {{ else if $item.Params.publication }}
-        {{- $item.Params.publication | markdownify -}}.
-      {{ end }}
-      <p>{{ partial "page_links" (dict "page" $item "is_list" 1) }}</p>
+  <span class="article-metadata li-cite-author">
+    {{ partial "page_metadata_authors" $item }}
+  </span>
+  ({{- $item.Date.Format "2006" -}}).
+  <a href="{{ $item.RelPermalink }}">{{ $item.Title }}</a>.
+  {{ if $item.Params.publication_short }}
+    {{- $item.Params.publication_short | markdownify -}}.
+  {{ else if $item.Params.publication }}
+    {{- $item.Params.publication | markdownify -}}.
+  {{ end }}
+  <p>{{ partial "page_links" (dict "page" $item "is_list" 1) }}</p>
 
-    {{/* MLA Style */}}
-    {{ else }}
+  {{/* MLA Style */}}
+  {{ else }}
 
-      <span class="article-metadata li-cite-author">
-        {{ partial "page_metadata_authors" $item }}.
-      </span>
-      <a href="{{ $item.RelPermalink }}">{{ $item.Title }}</a>.
-      {{ if $item.Params.publication_short }}
-        {{- $item.Params.publication_short | markdownify -}},
-      {{ else if $item.Params.publication }}
-        {{- $item.Params.publication | markdownify -}},
-      {{ end }}
-      {{- $item.Date.Format "2006" -}}.
+  <span class="article-metadata li-cite-author">
+    {{ partial "page_metadata_authors" $item }}.
+  </span>
+  <a href="{{ $item.RelPermalink }}">{{ $item.Title }}</a>.
+  {{ if $item.Params.publication_short }}
+    {{- $item.Params.publication_short | markdownify -}},
+  {{ else if $item.Params.publication }}
+    {{- $item.Params.publication | markdownify -}},
+  {{ end }}
+  {{- $item.Date.Format "2006" -}}.
 
-      {{ if $has_attachments }}
-      <div class="btn-links">
-        {{ partial "page_links" (dict "page" $item "is_list" 1) }}
-      </div>
-      {{ end }}
-
+  {{ if $has_attachments }}
+  <div class="btn-links">
+    {{ partial "page_links" (dict "page" $item "is_list" 1) }}
   </div>
+  {{ end }}
 
-  {{/* Add Altmetric and Dimension badges */}}
-  <div class="ml-3">
-  {{ if and .Params.add_badge .Params.doi }}
-    <div data-badge-popover="left" data-badge-type="donut" data-doi="{{ .Params.doi }}" data-condensed="true" class="altmetric-embed" data-link-target='_blank' rel="noopener noreferrer"></div>
-    <div class="__dimensions_badge_embed__" data-doi="{{ .Params.doi }}" data-legend="hover-left" data-style="small_circle" rel="noopener noreferrer"></div>
+  <div class="altmetrics">
+    {{ with $item.Params.doi }}
+    <div data-badge-popover="left" data-badge-type="donut" data-doi="{{ . }}" data-condensed="true" class="altmetric-embed" data-link-target='_blank' rel="noopener noreferrer"></div>
+    <div class="__dimensions_badge_embed__" data-doi="{{ . }}" data-legend="hover-left" data-style="small_circle" rel="noopener noreferrer"></div>
   </div>
   {{ end }}
 
