--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -7,3 +7,10 @@
 .cta-group {
   justify-content: center;
 }
+
+// image format
+.myimg {
+  margin: 15px; 
+  width: 60%;
+  vertical-align: middle;
+}
