--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -7,10 +7,14 @@
 .cta-group {
   justify-content: center;
 }
-
+#holder{
+  display: grid;
+  align-items: center;
+}
 // image format
 .myimg {
   margin: 15px; 
   width: 60%;
   vertical-align: middle;
+
 }
