--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -7,14 +7,13 @@
 .cta-group {
   justify-content: center;
 }
-#holder{
-  display: grid;
-  align-items: center;
-}
+
 // image format
 .myimg {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   margin: 15px; 
   width: 60%;
-  vertical-align: middle;
-
+  
 }
