update img class

--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -10,10 +10,6 @@
 
 // image format
 .myimg {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin: 15px; 
-  width: 60%;
-  
+  flex: 0 0 50%;
+  height: 50%;
 }
