--- a/layouts/partials/views/community/altcitation.html
+++ b/layouts/partials/views/community/altcitation.html
@@ -39,11 +39,11 @@
   </div>
   {{ end }}
 
-  {{ if .Params.add_badge}}
+  {{ if $item.add_badge}}
   <div class="altmetric-embed" data-badge-popover="right" data-badge-type="donut" data-doi="{{ .Params.doi }}" data-hide-no-mentions="true"></div>
   {{ end }}
 
-  {{ if .Params.add_badge}}
+  {{ if $item.add_badge}}
   <span class="__dimensions_badge_embed__" data-doi="{{ .Params.doi }}" data-hide-zero-citations="true" data-legend="hover-right"></span>
   {{ end }}
 
