--- a/layouts/partials/views/community/altcitation.html
+++ b/layouts/partials/views/community/altcitation.html
@@ -39,13 +39,13 @@
   </div>
   {{ end }}
 
-  {{ if $item.Params.add_badge}}
+  <!--{{ if $item.Params.add_badge}}-->
   <div class="altmetric-embed" data-badge-popover="right" data-badge-type="donut" data-doi="{{ $item.Params.doi }}" data-hide-no-mentions="true"></div>
-  {{ end }}
+  <!--{{ end }}-->
 
-  {{ if $item.Params.add_badge}}
+  <!--{{ if $item.Params.add_badge}}-->
   <span class="__dimensions_badge_embed__" data-doi="{{ $item.Params.doi }}" data-hide-zero-citations="true" data-legend="hover-right"></span>
-  {{ end }}
+  <!--{{ end }}-->
 
   {{ end }}
 </div>
