--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -7,3 +7,10 @@
 .cta-group {
   justify-content: center;
 }
+
+.myimage {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+ }
