update margin of img

--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -8,9 +8,11 @@
   justify-content: center;
 }
 
-.myimage {
+.mynetimage {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 15px;
+  margin-bottom: 15px;
   width: 40%;
  }
