--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -15,12 +15,26 @@
   margin-top: 15px;
   margin-bottom: 15px;
   width: 40%;
- }
+}
+
+.myparalogimg {
+  float: right;
+  margin-left: 10px;
+  border-radius: 5px;
+  padding: 1em;
+  position: static;
+  transition: all 0.5s ease-in-out;
+}
+
+.myparalogimg:hover{
+  transform: scale(1,1);
+}
 
 .myborder {
   display: flex;
   border: 1px solid rgba(0,0,0,.125);
   border-radius: 0.40rem;
+  background-color: honeydew;
 }
 
 .myborder{
