--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -17,24 +17,23 @@
   width: 40%;
 }
 
-.myparalogimg {
+.paralog {
   float: right;
   margin-left: 10px;
   border-radius: 5px;
   padding: 1em;
-  position: static;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
-.myparalogimg:hover{
-  transform: scale(1,1);
+.paralog:hover {
+  transform: scale(1.2);
 }
 
 .myborder {
   display: flex;
   border: 1px solid rgba(0,0,0,.125);
   border-radius: 0.40rem;
-  background-color: honeydew;
+  background-color: "#e9fcfd";
 }
 
 .myborder{
