--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -22,7 +22,7 @@
   margin-left: 10px;
   border-radius: 5px;
   padding: 1em;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 .paralog:hover {
@@ -33,7 +33,7 @@
   display: flex;
   border: 1px solid rgba(0,0,0,.125);
   border-radius: 0.40rem;
-  background-color: "#e9fcfd";
+  background-color: '#e3f5f5';
 }
 
 .myborder{
