--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -33,7 +33,7 @@
   display: flex;
   border: 1px solid rgba(0,0,0,.125);
   border-radius: 0.40rem;
-  background-color: '#e3f5f5';
+  background-color: lightsteelblue;
 }
 
 .myborder{
