change the background color

--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -26,14 +26,14 @@
 }
 
 .paralog:hover {
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 
 .myborder {
   display: flex;
   border: 1px solid rgba(0,0,0,.125);
   border-radius: 0.40rem;
-  background-color: lightsteelblue;
+  background-color:rgb(227, 245, 245);
 }
 
 .myborder{
