change item format

--- a/layouts/partials/views/community/li_citation.html
+++ b/layouts/partials/views/community/li_citation.html
@@ -1,3 +1,5 @@
+{{ $item := .item }}
+
 <div class="media stream-item">
     <div class="pub-list-item view-li-citation">
       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
