--- a/layouts/partials/views/community/li_citation.html
+++ b/layouts/partials/views/community/li_citation.html
@@ -8,56 +8,54 @@
       {{ if eq (site.Params.publications.citation_style | default "apa") "apa" }}
   
       <span class="article-metadata li-cite-author">
-        {{ partial "page_metadata_authors" . }}
+        {{ partial "page_metadata_authors" $item }}
       </span>
-      ({{- .Date.Format "2006" -}}).
-      <a href="{{ .RelPermalink }}">{{ .Title }}</a>.
-      {{ if .Params.publication_short }}
-      {{- .Params.publication_short | markdownify -}}.
-      {{ else if .Params.publication }}
-      {{- .Params.publication | markdownify -}}.
+      ({{- $item.Date.Format "2006" -}}).
+      <a href="{{ $item.RelPermalink }}">{{ $item.Title }}</a>.
+      {{ if $item.Params.publication_short }}
+      {{- $item.Params.publication_short | markdownify -}}.
+      {{ else if $item.Params.publication }}
+      {{- $item.Params.publication | markdownify -}}.
       {{ end }}
-      <p>{{ partial "page_links" (dict "page" . "is_list" 1) }}</p>
+      <p>{{ partial "page_links" (dict "page" $item "is_list" 1) }}</p>
   
       {{/* MLA Style */}}
       {{ else if eq site.Params.publications.citation_style "mla" }}
   
       <span class="article-metadata li-cite-author">
-        {{ partial "page_metadata_authors" . }}.
+        {{ partial "page_metadata_authors" $item }}.
       </span>
-      <a href="{{ .RelPermalink }}">{{ .Title }}</a>.
-      {{ if .Params.publication_short }}
-      {{- .Params.publication_short | markdownify -}},
-      {{ else if .Params.publication }}
-      {{- .Params.publication | markdownify -}},
+      <a href="{{ $item.RelPermalink }}">{{ $item.Title }}</a>.
+      {{ if $item.Params.publication_short }}
+      {{- $item.Params.publication_short | markdownify -}},
+      {{ else if $item.Params.publication }}
+      {{- $item.Params.publication | markdownify -}},
       {{ end }}
-      {{- .Date.Format "2006" -}}.
-      <p>{{ partial "page_links" (dict "page" . "is_list" 1) }}</p>
+      {{- $item.Date.Format "2006" -}}.
+      <p>{{ partial "page_links" (dict "page" $item "is_list" 1) }}</p>
   
       {{/* CO Style */}}
       {{ else }}
   
       <span class="article-metadata li-cite-author">
-        {{ partial "page_metadata_authors" . }}.
+        {{ partial "page_metadata_authors" $item }}.
       </span>
-      <a href="{{ .RelPermalink }}">{{ .Title }}</a>.<br>
-      {{ if .Params.publication_short }}
-        {{- .Params.publication_short | markdownify -}}
-      {{ else if .Params.publication }}
-        {{- .Params.publication | markdownify -}}
+      <a href="{{ $item.RelPermalink }}">{{ $item.Title }}</a>.<br>
+      {{ if $item.Params.publication_short }}
+        {{- $item.Params.publication_short | markdownify -}}
+      {{ else if $item.Params.publication }}
+        {{- $item.Params.publication | markdownify -}}
       {{ end }}
-      <p>{{ partial "page_links" (dict "page" . "is_list" 1) }}</p>
+      <p>{{ partial "page_links" (dict "page" $item "is_list" 1) }}</p>
   
       {{ end }}
     </div>
   
     {{/* Add Almetric and Dimension badges */}}
     <div class="ml-3">
-    {{ if and .Params.add_badge .Params.doi }}
-      <div data-badge-popover="right" data-badge-type="donut" data-doi="{{ .Params.doi }}" data-condensed="true" class="altmetric-embed"></div>
-      <div class="__dimensions_badge_embed__" data-doi="{{ .Params.doi }}" data-legend="hover-right" data-style="small_circle"></div>
+    {{ if and $item.Params.add_badge $item.Params.doi }}
+      <div data-badge-popover="right" data-badge-type="donut" data-doi="{{ $item.Params.doi }}" data-condensed="true" class="altmetric-embed"></div>
+      <div class="__dimensions_badge_embed__" data-doi="{{ $item.Params.doi }}" data-legend="hover-right" data-style="small_circle"></div>
     {{ end }}
     </div>
-  </div>
-
-  
+  </div>  
