--- a/layouts/partials/views/community/li_citation.html
+++ b/layouts/partials/views/community/li_citation.html
@@ -55,7 +55,7 @@
     <div class="ml-3">
     {{ if and $item.Params.add_badge $item.Params.doi }}
       <div data-badge-popover="left" data-badge-type="donut" data-doi="{{ $item.Params.doi }}" data-condensed="true" class="altmetric-embed" data-link-target='_blank' rel="noopener noreferrer"></div>
-      <div class="__dimensions_badge_embed__" data-doi="{{ $item.Params.doi }}" data-legend="hover-right" data-style="small_circle" rel="noopener noreferrer"></div>
+      <div class="__dimensions_badge_embed__" data-doi="{{ $item.Params.doi }}" data-legend="hover-left" data-style="small_circle" rel="noopener noreferrer"></div>
     {{ end }}
     </div>
   </div>  
