change publication view

--- a/layouts/partials/views/community/li_compact.html
+++ b/layouts/partials/views/community/li_compact.html
@@ -28,7 +28,7 @@
   {{ $summary = $item.Summary }}
 {{ end }}
 
-<div class="media stream-item">
+<div class="media stream-item view-compact">
   <div class="media-body">
 
     <div class="section-subheading article-title mb-0 mt-0">
@@ -83,4 +83,11 @@
       </a>
     {{end}}
   </div>
+
+  <div class="ml-3">
+    {{ if and $item.Params.add_badge $item.Params.doi }}
+    <div data-badge-popover="left" data-badge-type="donut" data-doi="{{ $item.Params.doi }}" data-condensed="true" class="altmetric-embed" data-link-target='_blank' rel="noopener noreferrer"></div>
+    {{ end }}
+  </div>
+  
 </div>
