--- a/layouts/partials/views/community/li_compact.html
+++ b/layouts/partials/views/community/li_compact.html
@@ -28,7 +28,7 @@
   {{ $summary = $item.Summary }}
 {{ end }}
 
-<div class="media stream-item view-compact">
+<div class="media stream-item">
   <div class="media-body">
 
     <div class="section-subheading article-title mb-0 mt-0">
@@ -74,20 +74,18 @@
 
   </div>
   <div class="ml-3">
-    {{ $resource := partial "functions/get_featured_image.html" $item }}
-    {{ with $resource }}
+    {{/* Add Almetric badges instead of featured image? */}}
+    {{ if and $item.Params.add_badge $item.Params.doi }}
+      <div data-badge-popover="left" data-badge-type="donut" data-doi="{{ $item.Params.doi }}" data-condensed="true" class="altmetric-embed" data-link-target='_blank' rel="noopener noreferrer"></div>
+    {{ else }}
+      {{ $resource := partial "functions/get_featured_image.html" $item }}
+      {{ with $resource }}
       {{ $image := .Resize "150x webp" }}
       <a href="{{$link}}" {{ $target | safeHTMLAttr }}>
         <img src="{{ $image.RelPermalink }}" height="{{ $image.Height }}" width="{{ $image.Width }}"
-            alt="{{ $item.Title }}" loading="lazy">
+          alt="{{ $item.Title }}" loading="lazy">
       </a>
-    {{end}}
-  </div>
-
-  <div class="ml-3">
-    {{ if and $item.Params.add_badge $item.Params.doi }}
-    <div data-badge-popover="left" data-badge-type="donut" data-doi="{{ $item.Params.doi }}" data-condensed="true" class="altmetric-embed" data-link-target='_blank' rel="noopener noreferrer"></div>
+      {{ end }}
     {{ end }}
   </div>
-  
 </div>
