--- a/layouts/partials/views/community/li_compact.html
+++ b/layouts/partials/views/community/li_compact.html
@@ -16,7 +16,7 @@
 
 {{ $has_attachments := partial "functions/has_attachments" $item }}
 
-<div class="media stream-item view-compact">
+<div class="media stream-item">
   <div class="media-body">
 
     <div class="section-subheading article-title mb-0 mt-0">
