--- a/layouts/partials/views/community/li_citation.html
+++ b/layouts/partials/views/community/li_citation.html
@@ -51,7 +51,7 @@
       {{ end }}
     </div>
   
-    {{/* Add Almetric badge */}}
+    {{/* Add Altmetric badge */}}
     <div class="ml-3">
     {{ if and $item.Params.add_badge $item.Params.doi }}
       <div data-badge-popover="left" data-badge-type="donut" data-doi="{{ $item.Params.doi }}" data-condensed="true" class="altmetric-embed" data-link-target='_blank' rel="noopener noreferrer"></div>
