--- a/layouts/partials/views/community/li_compact.html
+++ b/layouts/partials/views/community/li_compact.html
@@ -1,7 +1,13 @@
 {{ $item := .item }}
 
 {{/* Dynamic view adjusts to content type. */}}
-
+{{ $show_authors_only := false }}{{/* Show authors only or full metadata? */}}
+{{ $link := $item.RelPermalink }}
+{{ $target := "" }}
+{{ if $item.Params.external_link }}
+  {{ $link = $item.Params.external_link }}
+  {{ $target = "target=\"_blank\" rel=\"noopener\"" }}
+{{ end }}
 {{ if eq $item.Type "publication" }}
   {{ $show_authors_only = true }}
 {{ else if eq $item.Type "project" }}
@@ -18,9 +24,11 @@
     </div>
 
     <div class="stream-meta article-metadata">
+      {{if $item.Params.authors}}
       <div>
-        {{ partial "page_metadata_authors" $item }}
+        {{ $item.Params.authors }}
       </div>
+      {{ end }}
     </div>
 
     {{ if $has_attachments }}
