--- a/layouts/partials/views/community/li_compact.html
+++ b/layouts/partials/views/community/li_compact.html
@@ -27,7 +27,7 @@
 
       {{ if and $show_authors_only $item.Params.authors }}
       <div>
-        {{ partial "list_authors" $item }}
+        {{ partial "partials/views/community/list_authors" $item }}
       </div>
       {{ else if not $show_authors_only }}
         {{ partial "page_metadata" (dict "page" $item "is_list" 1) }}
