--- a/layouts/partials/views/community/list_authors.html
+++ b/layouts/partials/views/community/list_authors.html
@@ -5,12 +5,13 @@
   {{ range $index, $value := (.GetTerms $taxonomy) }}
     {{- /* Highlight the author's name? */ -}}
     {{- $highlight_name := .Page.Params.highlight_name | default false -}}
+    {{- $profile_page := site.GetPage (printf "/%s/%s" $taxonomy .) -}}
 
     {{- if gt $index 0 }}, {{ end -}}
     <span {{ if $highlight_name }}class="author-highlighted"{{end}}>
       {{/* Effectively check the page's `_build` option as `_build` is not exposed in Hugo's Page object. */}}
-      {{- if .RelPermalink -}}
-        {{ .LinkTitle }}
+      {{- if and $profile_page .RelPermalink -}}
+        <a href="{{.RelPermalink}}">{{.LinkTitle}}</a>
       {{- else -}}
         {{ .LinkTitle }}
       {{- end -}}
