--- a/layouts/partials/views/community/li_compact.html
+++ b/layouts/partials/views/community/li_compact.html
@@ -36,7 +36,7 @@
 
     {{ if $has_attachments }}
     <div class="btn-links">
-      {{ partial "page_links" (dict "page" $item "is_list" 1) }}
+      {{ partial "partials/views/community/page_some_links" (dict "page" $item "is_list" 1) }}
     </div>
     {{ end }}
 
