--- a/layouts/partials/views/community/list_authors.html
+++ b/layouts/partials/views/community/list_authors.html
@@ -5,12 +5,15 @@
   {{ range $index, $value := (.GetTerms $taxonomy) }}
     {{- /* Highlight the author's name? */ -}}
     {{- $highlight_name := .Page.Params.highlight_name | default false -}}
+    {{ $author_page := .author_page}}
+    {{- $has_profile := not (eq nil $author_page.Params.superuser) -}}
 
     {{- if gt $index 0 }}, {{ end -}}
     <span {{ if $highlight_name }}class="author-highlighted"{{end}}>
       {{/* Effectively check the page's `_build` option as `_build` is not exposed in Hugo's Page object. */}}
-      {{- if $highlight_name.RelPermalink -}}
-        <a href="{{.RelPermalink}}">{{.LinkTitle}}</a>
+      {{- if $has_profile -}}
+      {{ $profile_url := author_page.RelPermalink }}
+        {{if $profile_url}}<a href="{{profile_url}}">{{end}} {{.LinkTitle}} </a>
       {{- else -}}
         {{ .LinkTitle }}
       {{- end -}}
