update hyperlinks of authors

--- a/layouts/partials/views/community/list_authors.html
+++ b/layouts/partials/views/community/list_authors.html
@@ -12,11 +12,14 @@
     <span {{ if $highlight_name }}class="author-highlighted"{{end}}>
       {{/* Effectively check the page's `_build` option as `_build` is not exposed in Hugo's Page object. */}}
       {{- if $has_profile -}}
-      {{ $profile_url := author_page.RelPermalink }}
-        {{if $profile_url}}<a href="{{profile_url}}">{{end}} {{.LinkTitle}} </a>
-      {{- else -}}
-        {{ .LinkTitle }}
-      {{- end -}}
+        {{ $profile_url := $author_page.RelPermalink }}
+        {{ end }}
+        {{if $author_page.Params.email }}
+          {{if $profile_url}}<a href="{{profile_url}}">{{end}} {{.LinkTitle}} </a>
+        {{- else -}}
+          {{ .LinkTitle }}
+        {{- end -}}
+      {{ end }}
     </span>
     {{- if isset $.Params "author_notes" -}}
       {{- with (index $.Params.author_notes $index) -}}
