--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -31,7 +31,7 @@
 
 .myborder {
   display: flex;
-  background: azure;
+  background: whitesmoke;
   border: 1px solid rgba(0,0,0,.125);
   border-radius: 0.40rem;
 }
