--- a/layouts/partials/views/community/li_masonry.html
+++ b/layouts/partials/views/community/li_masonry.html
@@ -20,7 +20,8 @@
 
 {{ $resource := partial "functions/get_featured_image.html" $item }}
 
-<div class="col-md-3 col-6">
+<div class="row">
+  <div class="col-md-3 col-6">
     <div class="card">
         {{ with $resource }}
         {{ $image := .Resize "550x webp" }}
@@ -45,4 +46,5 @@
           {{ end }}
         </div>
       </div>
+  </div>
 </div>
